[gd_scene load_steps=17 format=3 uid="uid://d1pkojv0oect2"]

[ext_resource type="Script" path="res://Scenes/start_menu.gd" id="1_q3vy3"]
[ext_resource type="FontFile" uid="uid://bb4k6ydi6inda" path="res://Assets/monogram.ttf" id="2_2y0jo"]
[ext_resource type="Shader" path="res://Scenes/scroll_stickers.gdshader" id="2_ocg8k"]
[ext_resource type="Texture2D" uid="uid://bu1e147fi4cpk" path="res://Assets/background_stickers.png" id="3_imjrl"]
[ext_resource type="Texture2D" uid="uid://dc4brp5fi6w51" path="res://Untitled_Artwork 2.png" id="5_ctq8q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_td457"]
shader = ExtResource("2_ocg8k")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dsmf5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_33avb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xvlkv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mxgq4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qfwp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ajmf7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ye7ca"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3msj4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yk5ra"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a5heu"]

[node name="Start Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3vy3")

[node name="winner" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = 33.0
offset_right = 392.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2y0jo")
theme_override_font_sizes/font_size = 64
text = "            You Won! 
You can now attempt Hard Mode :)"

[node name="hm" type="Label" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = 33.0
offset_right = 392.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2y0jo")
theme_override_font_sizes/font_size = 64
text = "Hard mode unlocked after beating
normal mode."

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 0.890196, 0.854902, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_td457")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_imjrl")
expand_mode = 2

[node name="Menus" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -107.0
offset_top = -181.0
offset_right = 1941.0
offset_bottom = 2551.0
scale = Vector2(0.678785, 0.392236)
texture = ExtResource("5_ctq8q")

[node name="Regular" type="Button" parent="."]
layout_mode = 2
offset_left = 136.0
offset_top = 481.0
offset_right = 486.0
offset_bottom = 592.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_dsmf5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_33avb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xvlkv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mxgq4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5qfwp")

[node name="Difficult" type="Button" parent="."]
layout_mode = 2
offset_left = 682.0
offset_top = 482.0
offset_right = 980.0
offset_bottom = 590.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_ajmf7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ye7ca")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3msj4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yk5ra")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a5heu")

[connection signal="pressed" from="Regular" to="." method="_on_regular_pressed"]
[connection signal="mouse_entered" from="Difficult" to="." method="_on_difficult_mouse_entered"]
[connection signal="mouse_exited" from="Difficult" to="." method="_on_difficult_mouse_exited"]
[connection signal="pressed" from="Difficult" to="." method="_on_difficult_pressed"]
